--- a/style.css
+++ b/style.css
@@ -4,6 +4,16 @@ body {
     background-repeat: no-repeat;
     background-size:cover;
     animation: fadeIn 0.5s ease-in;
+    height: 100vh;
+    overflow: hidden;
+    margin: 0;
+}
+
+.beta {
+    font-size: 0.7em;
+    position: fixed;
+    margin-bottom: 5px;
+    bottom: 0;
 }
 
 .grid {
@@ -76,4 +86,37 @@ body {
     100% {
         transform: scale(1);
     }
+}
+
+/* coming soon */
+
+.coming-soon {
+    width: 50vh;
+    margin-top: 20%;
+    grid-row: 2;
+    grid-column: 2;
+    align-self: center;
+    justify-self: center;
+}
+
+.home {
+    grid-row: 2;
+    grid-column: 2;
+    align-self: end;
+    justify-self: center;
+    margin: 15%;
+}
+
+.home img{
+    width: 30vh;
+}
+
+.cover {
+    background-color: black;
+    z-index: -1;
+    width:100vw;
+    height:100vh;
+    display:block;
+    position:fixed;
+    opacity: 0.5;
 }
