--- a/style1.css
+++ b/style1.css
@@ -1,11 +1,17 @@
 body {
     background-color: #FECCCC;
-    background-image: url(assets/main-bg-01.png);
-    background-repeat: no-repeat;
-    background-size:cover;
     animation: fadeIn 0.5s ease-in;
     cursor: url(assets/cursor.png), auto;
     margin: 0;
+    background-image: url(assets/main-bg-01.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center;
+}
+
+html, body {
+    margin: 0;
+    height: 100%;
 }
 
 .cover {
@@ -20,12 +26,12 @@ body {
 /* main grid */
 
 .grid {
-    width: 90%;
-    height:90vh;
+    max-width: 95%;
     margin: auto;
+    height:90vh;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 28% 37% 20% 19%;;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 28% 37% 20% 19%;
     gap: 2vh;
 }
 
@@ -33,13 +39,6 @@ body {
     grid-column: 2 / 6;
     grid-row: 1;
     padding-top: 3vh;
-}
-
-
-
-.menu-left {
-    grid-column: 2;
-    grid-row: 2 / 4;
 }
 
 .cone {
@@ -139,10 +138,10 @@ body {
     /* object-fit: cover; */
 }
 
-.menu-right-1 img, .menu-left img, .menu-right-2 img, .finish-btn img, .clear-btn img, .back-btn img{
+.menu-right-1 img, .menu-right-2 img, .finish-btn img, .clear-btn img, .back-btn img{
     width: 28vh;
 
-    /* object-fit: cover; */
+    
 }
 
 a {
@@ -153,95 +152,178 @@ a {
 
 .menu-left {
     grid-column: 2;
-    grid-row: 2 / 4;
+    grid-row: 2 / 5;
     display: grid;
-    grid-template-columns: subgrid;
-    grid-template-rows: 21% 18% 18% 18% 18%;
-    gap: 2vh;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1.1fr 1fr 1fr 1fr 1fr 1.1fr;
+    /* gap: 2vh; */
     /* grid-template-columns: auto auto; */
 }
+/* 
+.flavors {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1.5fr 1fr 1fr 1fr 1fr;
+} */
 
-.flavors img {
-    /* width: 85%; */
+/* .flavors img {
     width: calc(100% - 5vh);
+    width: 100%;
     margin-left:2.5vh;
+} */
+
+/* .menu-left img{
+    width: 100%;
+} */
+
+#menu-left-bg {
+    grid-row: 1 / 6;
+    grid-column: 1;
+    justify-self: center;
+    /* align-self: center; */
+    width: 28vh;
+}
+
+.vanilla-btn img, .chocolate-btn img, .strawberry-btn img, .mint-btn img {
+    width: 100%;
 }
 
 .vanilla-btn {
     grid-row: 2;
+    grid-column: 1;
+    margin-left: 13%;
+    margin-right: 13%;
+    justify-self: center;
+    align-self: center;
 }
 
 .chocolate-btn {
     grid-row: 3;
+    grid-column: 1;
+    margin-left: 13%;
+    margin-right: 13%;
+    justify-content: center;
+    align-self: center;
 }
 
 .strawberry-btn {
     grid-row: 4;
+    grid-column: 1;
+    margin-left: 13%;
+    margin-right: 13%;
+    justify-content: center;
+    align-self: center;
 }
 
 .mint-btn {
     grid-row: 5;
+    grid-column: 1;
+    margin-left: 13%;
+    margin-right: 13%;
+    justify-content: center;
+    align-self: center;
 }
 
 /* topping grid */
 
 .menu-right-1 {
     display: grid;
-    grid-template-columns: subgrid;
-    grid-template-rows: 28% 20% 20% 20%;
-    gap: 2vh;
+    grid-template-columns: 1fr;
+    grid-template-rows: 3fr 1fr 1fr 1fr 1fr;
+    /* gap: 2vh; */
 }
 
-.toppings img {
+/* .toppings img {
     width: calc(100% - 4vh);
     margin-left: 2.2vh;
+} */
+
+.sprinkles-btn img, .chocolate-dip-btn img, .chocolate-chunks-btn img {
+    width: 100%;
+}
+
+#menu-right-bg {
+    grid-row: 1 / 6;
+    grid-column: 1;
+    justify-self: center;
 }
 
 .sprinkles-btn {
  grid-row: 2;
+ grid-column: 1;
+    margin-left: 13%;
+    margin-right: 13%;
+    justify-self: center;
+    align-self: center;
 }
 
 .chocolate-dip-btn {
  grid-row: 3;
+ grid-column: 1;
+    margin-left: 13%;
+    margin-right: 13%;
+    justify-self: center;
+    align-self: center;
 }
 
 .chocolate-chunks-btn {
  grid-row: 4;
+ grid-column: 1;
+    margin-left: 13%;
+    margin-right: 13%;
+    justify-self: center;
+    align-self: center;
 }
 
 /* cherry grid */
 
 .menu-right-2 {
+    grid-column: 5;
+    grid-row: 3;
  display: grid;
- grid-template-rows: subgrid;
- gap: 2vh;
+ grid-template-columns: 1fr 1fr;
+ grid-template-rows: 0.5fr 1fr;
 }
 
-.yes-no {
+#menu-right-2-bg {
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+    justify-self: center;
+}
+
+/* .yes-no {
     display: grid;
-    grid-template-columns: 48% 48%;
-    grid-template-rows: subgrid;
-    place-items: center;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
     padding-top: 6vh;
-}
+    margin-left: 10%;
+    margin-right: 10%;
+    justify-self: center;
+    align-self: center;
+} */
 
-.yes-no img{
-    width: calc(100% - 2vh);
-}
 .yes-btn img {
-    margin-left: 2vh;
+    width: 100%;
 }
 
 .no-btn img {
-    margin-left: 1vh;
+    width: 100%;
 }
 
 .yes-btn {
     grid-column: 1;
+    grid-row: 2;
+    justify-self: center;
+    align-self: center;
+    margin-left: 25%;
 }
 
 .no-btn {
     grid-column: 2;
+     grid-row: 2;
+    justify-self: center;
+    align-self: center;
+    margin-right: 25%;
 }
 
 /* finish window */
@@ -390,17 +472,20 @@ a {
 
 
 .pause img {
-    width: 100%;
+   width: 28vh;
     cursor: url(assets/cursor-hover.png), auto;
 }
 
 .seeOrderBtn img {
-    width: 100%;
+    width: 28vh;
     cursor: url(assets/cursor-hover.png), auto;
 }
 .side-btns {
-    grid-column: 1;
-    grid-row: 2;
+    grid-column: 6;
+    grid-row: 1;
+    margin-top: 1em;
+   justify-self: center;
+    align-self: center;
 }
 
 
