--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    color: red;
+    
     background-image: url(assets/index-bg.png);
     background-repeat: no-repeat;
     background-size:cover;
@@ -119,4 +119,40 @@ body {
     display:block;
     position:fixed;
     opacity: 0.5;
+}
+
+#mobile {
+    display:none;
+}
+
+@media (max-width: 1024px) and (orientation: portrait) {
+  body {
+    background-image: url(assets/index-bg.png);
+  }
+
+.grid {
+    display: grid;
+    height: 100%;
+    width: auto;
+    justify-content: center;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    place-items: center;
+}
+
+  .logo {
+    display: none;
+}
+.index-btn {
+   display:none;
+}
+
+#mobile {
+    display: block;
+    width: 70vw;
+    grid-column: 2;
+    grid-row: 1;
+    padding-top: 5vh;
+}
+
 }
