--- a/style2.css
+++ b/style2.css
@@ -1,3 +1,5 @@
+/* THIS STYLE SHEET IS FOR LEVEL 5 AND BEYOND */
+
 body {
     background-color: #FECCCC;
     animation: fadeIn 0.5s ease-in;
@@ -6,7 +8,6 @@ body {
     background-image: url(assets/main-bg-01.png);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
     background-position:center;
 }
 
@@ -154,11 +155,12 @@ a {
 /* flavor grid */
 
 .menu-left {
-    grid-column: 2;
+    grid-column: 1 / 3;
     grid-row: 2 / 5;
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: 1.1fr 1fr 1fr 1fr 1fr 1.1fr;
+    
     /* gap: 2vh; */
     /* grid-template-columns: auto auto; */
 }
@@ -181,21 +183,21 @@ a {
 
 #menu-left-bg {
     grid-row: 1 / 6;
-    grid-column: 1;
+    grid-column: 1 / 3;
     justify-self: center;
     /* align-self: center; */
-    width: 28vh;
+    width: 58vh;
 }
 
-.vanilla-btn img, .chocolate-btn img, .strawberry-btn img, .mint-btn img {
+.vanilla-btn img, .chocolate-btn img, .strawberry-btn img, .mint-btn img, .coffee-btn img, .pistachio-btn img, .lemon-btn img, .raspberry-btn img{
     width: 100%;
 }
 
 .vanilla-btn {
     grid-row: 2;
     grid-column: 1;
-    margin-left: 13%;
-    margin-right: 13%;
+    margin-left: 18%;
+    margin-right: 3%;
     justify-self: center;
     align-self: center;
 }
@@ -203,8 +205,8 @@ a {
 .chocolate-btn {
     grid-row: 3;
     grid-column: 1;
-    margin-left: 13%;
-    margin-right: 13%;
+    margin-left: 18%;
+    margin-right: 3%;
     justify-content: center;
     align-self: center;
 }
@@ -212,8 +214,8 @@ a {
 .strawberry-btn {
     grid-row: 4;
     grid-column: 1;
-    margin-left: 13%;
-    margin-right: 13%;
+    margin-left: 18%;
+    margin-right: 3%;
     justify-content: center;
     align-self: center;
 }
@@ -221,11 +223,48 @@ a {
 .mint-btn {
     grid-row: 5;
     grid-column: 1;
-    margin-left: 13%;
-    margin-right: 13%;
+    margin-left: 18%;
+    margin-right: 3%;
     justify-content: center;
     align-self: center;
 }
+
+.coffee-btn {
+    grid-row: 2;
+    grid-column: 2;
+    margin-left: 3%;
+    margin-right: 18%;
+    justify-content: center;
+    align-self: center;
+}
+
+.pistachio-btn {
+    grid-row: 3;
+    grid-column: 2;
+    margin-left: 3%;
+    margin-right: 18%;
+    justify-content: center;
+    align-self: center;
+}
+
+.lemon-btn {
+    grid-row: 4;
+    grid-column: 2;
+    margin-left: 3%;
+    margin-right: 18%;
+    justify-content: center;
+    align-self: center;
+}
+
+.raspberry-btn {
+    grid-row: 5;
+    grid-column: 2;
+    margin-left: 3%;
+    margin-right: 18%;
+    justify-content: center;
+    align-self: center;
+}
+
 
 /* topping grid */
 
